# python-backend-common-framework

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TEST_RESULTS.md  create_missing_files.py  create_remaining_files.py  fix_module_imports.py  fix_typing_imports.py  pyproject.toml  test_all_modules.py  test_all_modules_final.py  test_basic.py  test_basic_imports.py  test_core_only.py  test_first_two.py  test_fixed_modules.py  test_imports.py  test_modules.py  test_working_modules.py
.github/workflows/: ci.yml  release.yml  security.yml
agents/: README.md  pyproject.toml
agents/src/commons_agents/: __init__.py
agents/src/commons_agents/core/: __init__.py  agent.py
agents/src/commons_agents/memory/: __init__.py  memory.py
agents/src/commons_agents/tools/: __init__.py  tool.py
cloud/: README.md  pyproject.toml
cloud/src/commons_cloud/: __init__.py  factory.py
cloud/src/commons_cloud/abstractions/: __init__.py  compute.py  secrets.py  storage.py
cloud/src/commons_cloud/providers/: __init__.py
cloud/src/commons_cloud/providers/aws/: __init__.py  ec2.py  s3.py  secrets_manager.py
cloud/src/commons_cloud/providers/azure/: __init__.py  blob.py
cloud/src/commons_cloud/providers/gcp/: __init__.py  gcs.py
core/: README.md  pyproject.toml
core/src/commons_core/: __init__.py
core/src/commons_core/config/: __init__.py  manager.py  providers.py  validators.py
core/src/commons_core/errors/: __init__.py  circuit_breaker.py  exceptions.py  handlers.py  retry.py
core/src/commons_core/logging/: __init__.py  formatters.py  handlers.py  logger.py
core/src/commons_core/types/: __init__.py  models.py  serializers.py  validators.py
core/src/commons_core/utils/: __init__.py  async_utils.py  datetime.py  decorators.py
data/: README.md  pyproject.toml
data/src/commons_data/: __init__.py  factory.py
data/src/commons_data/abstractions/: __init__.py  base.py  query.py  schema.py
docs/: getting-started.md
events/: README.md  pyproject.toml
events/src/commons_events/: __init__.py
events/src/commons_events/abstractions/: __init__.py  base.py  consumer.py  producer.py
examples/: README.md
examples/dataflow-pipelines/: README.md  pyproject.toml  setup.py  test_setup.py
examples/dataflow-pipelines/.github/workflows/: dataflow-ci.yml
examples/dataflow-pipelines/common/: pyproject.toml
examples/dataflow-pipelines/common/src/common/: __init__.py  config.py  streaming.py  testing.py  transforms.py  windowing.py
examples/dataflow-pipelines/deployment/configs/: dev.json  prod.json
examples/dataflow-pipelines/deployment/scripts/: deploy_pipeline.sh
examples/dataflow-pipelines/pipelines/batch/audit_logs/: pyproject.toml
examples/dataflow-pipelines/pipelines/batch/audit_logs/src/audit_logs/: __init__.py
examples/dataflow-pipelines/pipelines/batch/transaction_data/: pyproject.toml
examples/dataflow-pipelines/pipelines/batch/transaction_data/src/transaction_data/: __init__.py
examples/dataflow-pipelines/pipelines/batch/user_events/: pyproject.toml
examples/dataflow-pipelines/pipelines/batch/user_events/src/user_events/: __init__.py  pipeline.py
examples/dataflow-pipelines/pipelines/batch/user_events/tests/: test_pipeline.py
examples/dataflow-pipelines/pipelines/streaming/clickstream_analytics/: pyproject.toml
examples/dataflow-pipelines/pipelines/streaming/clickstream_analytics/src/clickstream_analytics/: __init__.py
examples/dataflow-pipelines/pipelines/streaming/fraud_detection/: pyproject.toml
examples/dataflow-pipelines/pipelines/streaming/fraud_detection/src/fraud_detection/: __init__.py
examples/dataflow-pipelines/pipelines/streaming/iot_sensors/: pyproject.toml
examples/dataflow-pipelines/pipelines/streaming/iot_sensors/src/iot_sensors/: __init__.py
examples/dataflow-pipelines/pipelines/streaming/real_time_events/: pyproject.toml
examples/dataflow-pipelines/pipelines/streaming/real_time_events/src/real_time_events/: __init__.py  pipeline.py
examples/dataflow-pipelines/tests/: test_complete_setup.py
k8s/: README.md  pyproject.toml
k8s/src/commons_k8s/: __init__.py  types.py
k8s/src/commons_k8s/client/: __init__.py  async_client.py  manager.py
k8s/src/commons_k8s/resources/: __init__.py  configmap.py  deployment.py  pod.py  secret.py  service.py
llm/: README.md  pyproject.toml
llm/src/commons_llm/: __init__.py  factory.py
llm/src/commons_llm/abstractions/: __init__.py  base.py  embeddings.py  functions.py
pipelines/: README.md  pyproject.toml
pipelines/src/commons_pipelines/: __init__.py  simple_pipeline.py
pipelines/src/commons_pipelines/abstractions/: __init__.py  base.py  schema.py  sink.py  source.py
reference/: feature_list.md  repo_structure
scripts/: fix_dependencies.py  setup-dev.sh
testing/: README.md  pyproject.toml
testing/src/commons_testing/: __init__.py  async_case.py  factories.py  generators.py  integration.py
testing/src/commons_testing/fixtures/: __init__.py  async_fixtures.py  database_fixtures.py  file_fixtures.py
workflows/: LICENSE  README.md  pyproject.toml
workflows/src/commons_workflows/: __init__.py
workflows/src/commons_workflows/abstractions/: __init__.py  activity.py  state.py  step.py  workflow.py
