[project]
name = "commons-agents"
version = "0.1.0"
description = "Agent orchestration for Python Commons"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Python Commons Team", email = "team@pythoncommons.org"}
]
dependencies = [
    "commons-core",
    "commons-llm",
    "pydantic>=2.5.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
]


[tool.uv.sources]
commons-core = { workspace = true }
commons-llm = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
llamaindex = ["llama-index>=0.9.0"]
crewai = ["crewai>=0.1.0"]
autogen = ["pyautogen>=0.2.0"]
search = ["duckduckgo-search>=3.9.0", "googlesearch-python>=1.2.0"]
code = ["jupyterlab>=4.0.0", "ipykernel>=6.25.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commons_agents"]