[project]
name = "commons-data"
version = "0.1.0"
description = "Database abstractions for Python Commons"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Python Commons Team", email = "team@pythoncommons.org"}
]
dependencies = [
    "commons-core",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "aiomysql>=0.2.0",
    "motor>=3.3.0",
    "redis>=5.0.0",
]


[tool.uv.sources]
commons-core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
postgres = ["asyncpg>=0.28.0", "psycopg[binary,pool]>=3.1.0"]
mysql = ["aiomysql>=0.2.0", "PyMySQL>=1.1.0"]
sqlite = ["aiosqlite>=0.19.0"]
mongodb = ["motor>=3.3.0", "pymongo>=4.5.0"]
redis = ["redis>=5.0.0", "hiredis>=2.2.0"]
cassandra = ["cassandra-driver>=3.28.0"]
elasticsearch = ["elasticsearch[async]>=8.10.0"]
dynamodb = ["aioboto3>=12.0.0"]
cosmosdb = ["azure-cosmos>=4.5.0"]
neo4j = ["neo4j>=5.14.0"]
influxdb = ["influxdb-client[async]>=1.38.0"]
timescale = ["asyncpg>=0.28.0"]
prometheus = ["prometheus-client>=0.18.0"]
pinecone = ["pinecone-client>=2.2.0"]
qdrant = ["qdrant-client>=1.6.0"]
weaviate = ["weaviate-client>=3.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commons_data"]