[project]
name = "commons-k8s"
version = "0.1.0"
description = "Kubernetes utilities for Python Commons"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Python Commons Team", email = "team@pythoncommons.org"}
]
dependencies = [
    "commons-core",
    "kubernetes-asyncio>=28.0.0",
    "kubernetes>=28.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
]


[tool.uv.sources]
commons-core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-kubernetes>=0.3.0",
]
argo = ["argo-workflows>=6.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commons_k8s"]