[project]
name = "commons-llm"
version = "0.1.0"
description = "LLM provider abstractions for Python Commons"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Python Commons Team", email = "team@pythoncommons.org"}
]
dependencies = [
    "commons-core",
    "httpx>=0.24.0",
    "tiktoken>=0.5.0",
    "jinja2>=3.1.2",
    "cachetools>=5.3.0",
]


[tool.uv.sources]
commons-core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.8.0"]
google = ["google-generativeai>=0.3.0"]
mistral = ["mistralai>=0.0.8"]
cohere = ["cohere>=4.32.0"]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
langsmith = ["langsmith>=0.0.70"]
llamaindex = ["llama-index>=0.9.0"]
local = ["transformers>=4.35.0", "torch>=2.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commons_llm"]