[project]
name = "commons-pipelines"
version = "0.1.0"
description = "Data pipeline abstractions for Python Commons"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Python Commons Team", email = "team@pythoncommons.org"}
]
dependencies = [
    "commons-core",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "sqlalchemy>=2.0.0",
    "fsspec>=2023.10.0",
]


[tool.uv.sources]
commons-core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
spark = ["pyspark>=3.5.0"]
polars = ["polars>=0.19.0"]
duckdb = ["duckdb>=0.9.0"]
beam = ["apache-beam>=2.50.0"]
dask = ["dask[complete]>=2023.10.0"]
ray = ["ray[data]>=2.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commons_pipelines"]