[project]
name = "commons-workflows" 
version = "0.1.0"
description = "Business process workflow management for Python Commons"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Python Commons Team", email = "team@pythoncommons.org"}
]
dependencies = [
    "commons-core",
    "pydantic>=2.5.0",
]


[tool.uv.sources]
commons-core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
temporal = ["temporalio>=1.4.0"]
argo = ["argo-workflows>=6.0.0"]
airflow = ["apache-airflow>=2.7.0"]
prefect = ["prefect>=2.14.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commons_workflows"]