[project]
name = "dataflow-common"
version = "0.1.0"
description = "Common utilities for Google Dataflow pipelines"
requires-python = ">=3.9"
dependencies = [
    "apache-beam[gcp]>=2.50.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-bigtable>=2.20.0",
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-monitoring>=2.15.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "avro>=1.11.0",
    "fastavro>=1.8.0",
    "pytz>=2023.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"