[project]
name = "transaction-data-batch-pipeline"
version = "0.1.0"
description = "Batch processing pipeline for transaction data (GCS to BigTable)"
requires-python = ">=3.9"
dependencies = [
    "dataflow-common",
]

[tool.uv.sources]
dataflow-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"