[project]
name = "fraud-detection-streaming-pipeline"
version = "0.1.0"
description = "Real-time fraud detection pipeline (Pub/Sub ML inference)"
requires-python = ">=3.9"
dependencies = [
    "dataflow-common",
]

[tool.uv.sources]
dataflow-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"