[project]
name = "real-time-events-streaming-pipeline"
version = "0.1.0"
description = "Real-time streaming pipeline for events (Pub/Sub to BigTable)"
requires-python = ">=3.9"
dependencies = [
    "dataflow-common",
]

[tool.uv.sources]
dataflow-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"